# renode-with-nodejs

./: .gitignore  binding.gyp  index.js  package.json
__tests__/: renode.test.js
src/libraries/: sahararenode.js
src/libraries/sahararenode/: CMakeLists.txt  Makefile  analyze_response.cc  analyze_response.h  config.cc  config.h  global.cc  global.h  hex.hh  hex_dump.h  i_renode.cc  i_renode.h  libtelnet.cc  libtelnet.h  monitor-script.cc  monitor-script.h  node.cc  telnetclient.cc  telnetclient.h  utils.cc  utils.hh  v-terminal.cc  v-terminal.h
src/libraries/sahararenode/data/: arp.json  config.json  demo-devices.json  demo-network.json  devices.json  lab-devices.json  lab-network.json  modes-0000ffff.json  modes.json  network-local.json  network-real.json  network.json  sdp.hex  sdpconfig-2.json  sdpconfig.json  sdpconfig.txt
src/libraries/sahararenode/machine/: machine.h  peripheral.cc  peripheral.h  peripherals.cc  peripherals.h
src/libraries/sahararenode/profile_config/: channels.json  config.json  devices.json
